tests/miniJava/neg/005119_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java this ) { return 0 ; } }
